[gd_scene load_steps=2 format=3 uid="uid://b24c4ykkqk73t"]

[ext_resource type="Script" uid="uid://cyhkcf35jbwdh" path="res://src/Scripts/UI/FightEncounterObj.gd" id="1_shb2j"]

[node name="FightEventObj" type="PanelContainer"]
custom_minimum_size = Vector2(500, 440)
offset_right = 583.0
offset_bottom = 430.0
script = ExtResource("1_shb2j")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Name" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/Name"]
layout_mode = 2
size_flags_horizontal = 3
text = "Event name"

[node name="EventName" type="LineEdit" parent="VBoxContainer/Name"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="VBoxContainer/Name"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "X
"

[node name="Description" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 3
size_flags_stretch_ratio = 2.76

[node name="Label" type="Label" parent="VBoxContainer/Description"]
layout_mode = 2
size_flags_horizontal = 3
text = "Description"

[node name="DescInput" type="TextEdit" parent="VBoxContainer/Description"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.18

[node name="Resource" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/Resource"]
layout_mode = 2
size_flags_horizontal = 3
text = "Enemy resource"

[node name="EnemyName" type="LineEdit" parent="VBoxContainer/Resource"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Background" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/Background"]
layout_mode = 2
size_flags_horizontal = 3
text = "Background"

[node name="BackgroundName" type="LineEdit" parent="VBoxContainer/Background"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Add dialogue"

[node name="Scroll" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.75

[node name="DialogueList" type="HBoxContainer" parent="VBoxContainer/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EligibleFromPool" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
text = "Eligible from event pool"

[connection signal="button_up" from="VBoxContainer/Name/CloseButton" to="." method="OnClose"]
[connection signal="button_up" from="VBoxContainer/Button" to="." method="AddDialogue"]
